<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/update_users"
        android:background="@color/blue"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/user_name"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/edit_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/mssv"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/edit_mssv" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/lop"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/edit_lop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/quequan"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/edit_quequan" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/cap_nhat"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/btn_UpdateConfirm"

        />

</androidx.appcompat.widget.LinearLayoutCompat>